[bug #120132793] Fix login page alignment

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -631,4 +631,5 @@ time p {
 
 .border {
   border: 1px solid #ccc !important;
+  margin-bottom: 5px;
 }
